fix(`ComboBox`): fix UI bugs relating to icon & text-wrapping of items

--- a/src/styles/dropdown-menu.css
+++ b/src/styles/dropdown-menu.css
@@ -92,6 +92,7 @@
 
         .dropdown-menu-item-name,
         .dropdown-menu-section-header-content {
+            white-space: nowrap;
             display: block;
             grid-area: center;
 
